# PracticalWork_Semester3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: grid.h  math_utils.h  visualize_split.h
report/: main.tex
report/appendices/: appendix_A.tex
report/preamble/: preamble.tex
report/sections/: conclusion.tex  research.tex  theoretical_part.tex
report/styles/: code.sty  document.sty  section.sty
src/: grid.cpp  main.cpp  math_utils.cpp  visualize_split.cpp
tests/1_test/: global_node_coordinates.txt
tests/2_test/: global_node_indicies.txt
tests/3_test/: global_node_coordinates.txt  global_node_indicies.txt
tests/4_test/: global_node_coordinates.txt  global_node_indicies.txt
tests/5_test/: global_node_indicies.txt
